# monty-hall-problem-demo

./: .gitignore  Cargo.toml
src/: lib.rs
src/application/: mod.rs
src/domain/: contestant.rs  door.rs  game_show.rs  mod.rs  solution_method.rs  success_calculator.rs
src/ports/cli/: mod.rs  structopt.rs
src/ports/cli/structopt/: mod.rs  solution_method.rs
