[package]
name = "monty-hall-problem-demo"
version = "0.3.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.5"
structopt = "0.3"
thiserror = "1.0"